# actions-ex

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
actions_ex/: __init__.py  core.py
